AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = trancas
trancas_SOURCES = src/main.cpp \
		  src/Ant.cpp \
		  src/Node.cpp \
		  src/TrancasException.cpp \
		  src/ForwardAnt.cpp \
		  src/BackwardAnt.cpp \
		  src/Link.cpp \
		  src/Network.cpp

dist_noinst_SCRIPTS = autogen.sh
